--- a/src/pages/Index/index.css
+++ b/src/pages/Index/index.css
@@ -14,3 +14,52 @@
 .swiper{
   height: 212px;
 }
+
+.group{
+  background-color: #f6f5f6;
+  overflow: hidden;
+  padding: 0 10px;
+}
+.group-title{
+  position: relative;
+  margin: 15px 0 15px 10px;
+}
+.group .group-title .more{
+  position: absolute ;
+  right: 0;
+  font-size: 14px;
+  font-weight: normal;
+  color: #787d82;
+}
+.group .am-grid .am-flexbox{
+  background-color: inherit;
+}
+.group .am-grid .am-flexbox .am-flexbox-item .am-grid-item-content {
+  padding: 0;
+  padding-bottom: 10px;
+
+}
+.group .group-item{
+  height: 75px;
+}
+.group .group-item .desc .title{
+  font-weight: bold;
+  font-size: 13px;
+  margin-bottom: 5px;
+}
+.group .group-item .desc .info{
+  font-size: 12px;
+  color: #999;
+}
+.group .group-item img{
+  width: 55px;
+}
+.group .am-flexbox-align-stretch{
+  margin-bottom: 10px;
+}
+.group .am-flexbox-align-stretch .am-grid-item{
+  background-color: #fff;
+}
+.group .am-flexbox-align-stretch .am-grid-item:first-child{
+  margin-right: 10px;
+}
