--- a/src/pages/Index/index.css
+++ b/src/pages/Index/index.css
@@ -1,3 +1,44 @@
+/* search */
+.search-box {
+  position: absolute;
+  top: 25px;
+  width: 100%;
+  padding: 0 10px;
+}
+.search-box .search{
+  flex: 1;
+  height: 34px;
+  margin: 0 10px;
+  padding: 5px 5px 5px 8px;
+  border-radius: 3px;
+  background-color: #fff;
+}
+.search-box .search .location .icon-arrow{
+  margin-left: 2px;
+  font-size: 12px;
+  color: #7f7f80;
+}
+.search-box .search .form{
+  border-left: 1px solid #e5e5e5;
+  margin-left: 12px;
+  line-height: 16px;
+}
+.search-box .search .form .icon-seach{
+  vertical-align: middle;
+  padding: 0 2px 0 12px;
+  color: #9c9fa1;
+  font-size: 15px;
+}
+.search-box .search .form .text{
+  padding-left: 4px;
+  font-size: 13px;
+  color: #9c9fa1;
+}
+.search-box .icon-map{
+  font-size: 25px;
+  color: #fff;
+}
+
 .nav{
   padding: 10px 0;
 }
@@ -62,4 +103,46 @@
 }
 .group .am-flexbox-align-stretch .am-grid-item:first-child{
   margin-right: 10px;
+} 
+
+/* //news */
+.news{
+  padding: 10px;
+  background-color: #fff;
+  overflow: hidden;
+}
+.news .group-title{
+  margin: 10px 0 5px 10px ;
+  font-size: 15px;
+}
+.news .news-item{
+  height: 120px;
+  padding: 15px 10px 15px 0;
+  border-bottom: 1px solid #e5e5e5; 
+}
+.news .news-item:last-child{
+  border: none;
+}
+.news .imgWrap{
+  float: left;
+  height: 90px;
+  width: 120px;
+}
+.news img{
+  height: 90px;
+  width: 120px;
+}
+.news .content{
+  overflow: hidden;
+  height: 100%;
+  padding-left: 12px;
+}
+.news .title{
+  margin-bottom: 15px;
+  font-size: 14px;
+}
+.news .info{
+  width: 100%;
+  color: #9c9fa1;
+  font-size: 12px;
 }
