--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,16 @@ html,body{
   font-family: 'Microsoft YaHei';
   color: #333;
   background-color: #fff;
+  margin: 0;
+  padding: 0;
 }
 *{
   box-sizing: border-box;
 }
 h2{
   margin: 0;
+}
+html,body,#root,.App{
+  height: 100%;
 }
 
