--- a/src/pages/CityList/index.css
+++ b/src/pages/CityList/index.css
@@ -1,7 +1,32 @@
+.citylist{
+  height: 100% ;
+  padding-top: 45px;
+}
 .citylist .navbar{
+  position: fixed;
+  top: 0;
+  width: 100%;
   color: #333;
   background-color: #f6f5f6;
 }
 .citylist .am-navbar-light .am-navbar-title{
   color: #333;
+}
+
+
+.citylist .city .title{
+  padding: 10px 15px;
+  font-size: 14px;
+  color: #999;
+}
+.citylist .city .name{
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 15px;
+  border-bottom: 1px solid #eee;
+  font-size: 16px;
+  color: #333;
+  background-color: #fff;
+  cursor: pointer;
 }
