--- a/src/pages/CityList/index.css
+++ b/src/pages/CityList/index.css
@@ -30,3 +30,30 @@
   background-color: #fff;
   cursor: pointer;
 }
+
+
+.citylist .city-index {
+  z-index: 1;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  right: 5px;
+  height: 90%;
+  box-sizing: border-box;
+  padding-top: 20px;
+  text-align: center;
+  
+}
+.citylist .city-index .city-index-item{
+  flex: 1;
+}
+.citylist .city-index .index-active{
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  line-height: 15px;
+  border-radius: 100%;
+  font-size: 12px;
+  color: #fff;
+  background-color: #21b97a;
+}
